# SimpleEncrypt

./: .gitignore  LICENSE  README.md
CPP/: CMakeLists.txt  README.md
CPP/src/: base64.cpp  simpleencrypt.cpp  simpleencrypt.h
CPP_QMAKE/: SimpleEncrypt.pro
CPP_QMAKE/src/: simpleencrypt.cpp
Python/: README.md  setup.py
Python/simpleencrypt/: __init__.py  aes256.py
SimpleEncrypt_Python/: README.md
SimpleEncrypt_Python/CPP_Library/: CMakeLists.txt  main.cpp
SimpleEncrypt_Python/Python_Package/: setup.py
SimpleEncrypt_Python/Python_Package/simpleencrypt/: aes256.py
SimpleEncrypt_Python/Python_Package/src/SimpleEncrypt/: __init__.py  aes256.py
